--- a/index.html
+++ b/index.html
@@ -6,9 +6,14 @@
     <!-- Pointer events polyfill for old browsers, see https://caniuse.com/#feat=pointer -->
     <script src="https://unpkg.com/elm-pep"></script>
     <style>
+      html, body {
+        height: 100%;
+        margin: 0px;
+    }
       .map {
         width: 100%;
-        height:650px;
+        height:100%;
+        
       }
       .ol-popup {
         position: absolute;
