--- a/index.html
+++ b/index.html
@@ -70,6 +70,9 @@
         content: "✖";
       }
     </style>
+    <link rel = "icon" href = 
+    "Madayn-Logo.png" 
+            type = "image/x-icon">
   </head>
   <body>
     <div id="map" class="map">
